--- a/app/src/main/res/layout/thridlogin_dialog_loading.xml
+++ b/app/src/main/res/layout/thridlogin_dialog_loading.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/dialog_view"
-    android:layout_width="fill_parent"
+    android:layout_width="wrap_content"
     android:layout_height="fill_parent"
-    android:background="@null"
+    android:background="#ffffff"
     android:minHeight="60dp"
     android:minWidth="180dp"
     android:orientation="horizontal">
@@ -13,7 +13,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/loading_icon"
-        android:layout_alignParentLeft="true"
+
+        android:layout_centerInParent="true"
         android:layout_centerVertical="true"
         android:layout_marginLeft="20dp"
         android:layout_marginStart="20dp"/>
