--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -14,27 +14,32 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical">
-    <TextView
-        android:id="@+id/item_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:textSize="17sp"
-        android:textColor="#3B3B3B"
-        android:textStyle="bold"
-         />
-    <TextView
-        android:id="@+id/item_alias"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-
-        />
-    <TextView
+        <TextView
+            android:id="@+id/item_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:textSize="17sp"
+            android:textColor="#3B3B3B"
+            android:textStyle="bold"
+            />
+        <TextView
         android:id="@+id/item_info"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
         />
+
+        <TextView
+            android:id="@+id/item_alias"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:singleLine="true"
+            android:ellipsize="end"
+            />
+
+
+
+
     <TextView
         android:id="@+id/item_content"
         android:layout_width="match_parent"
