--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".MainActivity"
-    android:orientation="vertical"
-    android:gravity="center">
 
+    >
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_centerInParent="true">
     <RelativeLayout
         android:id="@+id/logo_ll"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="0dp">
+        android:layout_marginTop="0dp"
+        android:gravity="center_vertical">
 
         <ImageView
             android:id="@+id/iv_icon_left"
@@ -76,7 +83,7 @@
         android:id="@+id/btn_search"
         android:layout_width="match_parent"
         android:layout_height="@dimen/login_button_height"
-        android:layout_marginBottom="@dimen/default_general_margin"
+
         android:layout_marginLeft="@dimen/default_general_margin"
         android:layout_marginRight="@dimen/default_general_margin"
         android:layout_marginTop="@dimen/default_long_margin"
@@ -85,5 +92,18 @@
         android:text="搜索"
         android:textColor="@color/white"
         android:textSize="@dimen/default_medium_text_size" />
+    </LinearLayout>
 
-</LinearLayout>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="0dp"
+        android:background="@android:color/white"
+        app:itemIconTint="@color/colorPrimary"
+        app:itemTextColor="@color/colorPrimary"
+        app:menu="@menu/bottom_navigation_main" />
+
+</RelativeLayout>
